--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ a{
     align-content(but align-content determines the spacing between lines, while align-items determines how the items as a whole are aligned within the container. When there is only one line, align-content has no effect.)
 */
 
-.body{
+.body {
     font-family: 'Courier New', Courier, monospace;
     min-height: 100vh;
     padding: 20px;
@@ -198,7 +198,13 @@ a{
     gap: 1rem;
 }
 
-.box{
+.container {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    gap: 20px;
+}
+
+.box {
     min-width: 100px;
     height: 100px;
     background-color: #000;
@@ -206,10 +212,40 @@ a{
     font-size: 2rem;
     padding: 0.5rem;
     display:flex;
-    justify-content: center;
+    justify-content: center; 
 }
 
 .box:nth-child(2){
     background-color: aqua;
     order: 1;
 }
+
+/* position, flex, grid */
+
+
+.box:first-child{
+    background-color: blanchedalmond;
+    grid-column: 1/3;
+    grid-row: 1/3;
+}
+
+/* images */
+/* *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    height: 100vh;
+    font-family: 'Segoe UI', sans-serif;
+}
+.example{
+    margin: 1rem;
+    padding-left: 20px;
+    border: 1px solid red;
+}
+
+.example img{
+    width: 25%;
+    height: auto;
+} */
