--- a/css/style.css
+++ b/css/style.css
@@ -182,13 +182,13 @@ a{
     align-content(but align-content determines the spacing between lines, while align-items determines how the items as a whole are aligned within the container. When there is only one line, align-content has no effect.)
 */
 
-.body {
+/* .body {
     font-family: 'Courier New', Courier, monospace;
     min-height: 100vh;
     padding: 20px;
-}
+} */
 
-.container{
+/* .container{
     max-width: 800px;
     min-height: 400px;
     margin-inline: auto;
@@ -196,9 +196,9 @@ a{
     display:flex;
     justify-content: center;
     gap: 1rem;
-}
+} */
 
-.container {
+/* .container {
     display: grid;
     grid-template-columns: 2fr 1fr 2fr;
     gap: 20px;
@@ -208,29 +208,32 @@ a{
     min-width: 100px;
     height: 100px;
     background-color: #000;
-    color: #fff;
-    font-size: 2rem;
-    padding: 0.5rem;
-    display:flex;
+    color: #fff; */
+    /* font-size: 2rem;
+    padding: 0.5rem; */
+    /* display:flex;
     justify-content: center; 
 }
-
-.box:nth-child(2){
+*/
+/* .box:nth-child(2){
     background-color: aqua;
     order: 1;
-}
+} */
 
 /* position, flex, grid */
 
 
-.box:first-child{
+/* .box:first-child{
     background-color: blanchedalmond;
     grid-column: 1/3;
     grid-row: 1/3;
-}
+} */
 
 /* images */
-/* *{
+img{
+    display: block;
+}
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -238,14 +241,60 @@ a{
 body{
     height: 100vh;
     font-family: 'Segoe UI', sans-serif;
+    background-image: linear-gradient(blue, red);
+}
+.nowrap{
+    white-space: nowrap;
+}
+figcaption{
+    position: absolute;
+    left: -10000px;
+}
+.herocontainer{
+    background-color: rgb(251, 210, 156);
+    background-image: url('../pexels-zen-chung-5748671.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.hero{
+    border-bottom: 2px solid #000;
+    padding: 20px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 30px;
+    background-color: hsla(0, 0%, 0%, 0.671);
+}
+.profile-pic-figure{
+    width: 35%;
+}
+.profile-pic-figure img{
+    width: 100%;
+    height: auto;
+    min-width: 100px;
+    border: 5px double hsla(0, 0%, 50%, 0.322);
+    border-radius: 50%;
+    opacity: 0.5;
+}
+.lewis{
+    background-image: url('../pexels-zen-chung-5748671.webp');
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+.h1{
+    font-size: 500%;
+    background-color: hsla(0, 0%, 0%, 0.411);
+    text-shadow: 2px 2px 5px #000;
 }
 .example{
     margin: 1rem;
     padding-left: 20px;
-    border: 1px solid red;
+    border: 1px dashed red;
 }
 
 .example img{
     width: 25%;
     height: auto;
-} */
+}
