--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,7 @@ a{
 } */
 
 /* images */
-img{
+/* img{
     display: block;
 }
 *{
@@ -297,4 +297,47 @@ figcaption{
 .example img{
     width: 25%;
     height: auto;
+} */
+
+/* Media Queries */
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-image: radial-gradient(aliceblue, salmon);
+    display: flex;
+    flex-direction: column;
+}
+header, nav, main, footer{
+    display: grid;
+    place-content: center;
+    grid-template-columns: 100%;
+    text-align: center;
+}
+header, footer{
+    position: sticky;
+    background-color: #1e293b;
+    color: whitesmoke;
+}
+main{
+    flex-grow: 1;
+}
+nav{
+    background-color: #fff;
+    color: #000;
+    padding: 0.5rem;
+    border-bottom: 2px solid saddlebrown;
+}
+@media screen and (max-width: 480px){
+    /* max-width: ; */
+    /* orientation: landscape; */
+    /* min-aspect-ratio:16/9; */
+
+    nav{
+        display: none;
+    }
 }
