--- a/card-project/style.css
+++ b/card-project/style.css
@@ -14,12 +14,16 @@ img{
     height: auto;
 }
 
-article:first-child{
+/* article:first-child{
     margin-top: 100px;
 }
 article:last-child{
     margin-bottom: 20px;
-}
+} */
+ /* article{
+    margin-top:3rem;
+    margin-bottom: 3rem;
+ } */
 /* Utility Classes */
 .nowrap{
     white-space: nowrap;
@@ -43,6 +47,7 @@ main{
     align-items: center;
     padding: 1rem;
     gap: 1.5rem;
+    padding: 110px;
 }
 
 nav{
@@ -114,4 +119,75 @@ footer{
     color: aliceblue;
     text-align: center;
     width: 100%;
+}
+
+@media screen and (min-width:576px){
+    main{
+        justify-content: center;
+        flex-flow: row wrap;
+        padding: 110px;
+    }
+    .card{
+        width:min(100%, 400px)
+    }
+    .card:last-child{
+        order: -1;
+    }
+    .article{
+        margin-bottom: 0;
+    }
+}
+
+@media screen and (min-width:768px){
+    nav{
+        display: none;
+    }
+    .card{
+        width: min(100%, 325px);
+    }
+    .card figure{
+        flex-flow:reverse;
+    }
+    .card figcaption{
+        margin:0.1em 0;
+    }
+    .card p{
+        margin-top:1rem;
+    }
+}
+
+@media screen and (min-width:992px){
+    .card{
+        width:min(100%, 400px);
+    }
+    .card:nth-child(2){
+        order: -1;
+    }
+
+}
+
+@media screen and (min-width:1200px){
+    .card{
+        width:min(calc(33% - 1rem), 500px)
+    }
+}
+
+@media screen and (max-height:425px) and (min-aspect-ratio:7/4){
+    h1{
+        font-size: 1.5rem;
+    }
+    nav{
+        display: none;
+    }
+    main{
+        flex-flow: row nowrap;
+        justify-content: space-evenly;
+        align-items: stretch;
+    }
+    .card{
+        width: min(calc(33% - 0.25rem),200px);
+    }
+    .card figcaption, card p{
+        font-size: 1.25rem;
+    }
 }
