--- a/card-project/style.css
+++ b/card-project/style.css
@@ -14,21 +14,10 @@ img{
     height: auto;
 }
 
-/* article:first-child{
-    margin-top: 100px;
-}
-article:last-child{
-    margin-bottom: 20px;
-} */
- /* article{
-    margin-top:3rem;
-    margin-bottom: 3rem;
- } */
 /* Utility Classes */
 .nowrap{
     white-space: nowrap;
 }
-
 
 /* General Styles */
 body{
@@ -62,7 +51,7 @@ nav{
 
 .card{
     scroll-margin-top: 8rem;
-    width: min(100%, 350px);
+    width: min(100%, 450px);
     background-color: #cbd5e1;
     border: 2px solid #000;
     border-radius: 15px;
@@ -133,7 +122,7 @@ footer{
     .card:last-child{
         order: -1;
     }
-    .article{
+    article{
         margin-bottom: 0;
     }
 }
